@@ -1,5 +1,10 @@
 2009-11-30  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* libtiff/tif_{aux.c,dir.c,dir.h,dirinfo.c}: Return to handling 
+	TIFFTAG_REFERENCEBLACKWHITE as a field in the TIFF directory instead
+	of as a custom(generic) field to avoid a potential reentrancy problem.
+	http://bugzilla.maptools.org/show_bug.cgi?id=2125
+	
 	* libtiff/tif_color.c, libtiff/tif_getimage.c, libtiff/tiffio.h,
 	man/TIFFcolor.3tiff: Make TIFFDisplay argument in TIFFCIELabToRGBInit 
 	const, and display_sRGB static and const.
